--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Recipe Book</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="main-page">
         <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
         <li><a href="./recipes/blueberry-waffles.html">Blueberry Waffles</a></li>
         <li><a href="./recipes/potato-salad.html">World's Best Potato Salad</a></li>
+    </ul>
+    <ul class="main-images">
+        <li><img src="./images/lasagna.jpg" alt="Lasagna" height="240" width="240" class="lasagna"> </li>
+        <li><img src="./images/blueberry-waffles.jpg" alt="Blueberry Waffles" height="240" width="240" class="waffle"></li>
+        <li><img src="./images/potato-salad.jpg" alt="Potato Salad" height="240" width="240" class="potato"></li>
     </ul>
     
 </body>
