--- a/recipes/potato-salad.html
+++ b/recipes/potato-salad.html
@@ -3,55 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>World's Best Potato Salad</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <p><a href="../index.html">Go Back</a></p>
-    <h2>World's Best Potato Salad</h2>
-    <img src="../images/potato-salad.jpg" alt="Potato Salad" height="310" width="310">
-    <h3>Description</h3>
-    <p>It took me 3 days to make that potato salad! THREE DAYS!!!</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>6 medium potatoes</li>
+    <div class="recipe-header">
+        <h1>Odin Recipes</h1>
+        <p><a href="../index.html">Go Back</a></p>
+    </div>
+    <div class="recipe-main">
+        <h2>World's Best Potato Salad</h2>
+        <img src="../images/potato-salad.jpg" alt="Potato Salad" height="310" width="310">
+        <h3>Description</h3>
+        <p>It took me 3 days to make that potato salad! THREE DAYS!!!</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>6 medium potatoes</li>
 
-        <li>½ cup white sugar</li>
+            <li>½ cup white sugar</li>
 
-        <li>2 large eggs, beaten</li>
+            <li>2 large eggs, beaten</li>
 
-        <li>1 teaspoon cornstarch</li>
+            <li>1 teaspoon cornstarch</li>
 
-        <li>salt to taste</li>
+            <li>salt to taste</li>
 
-        <li>1 (5 ounce) can evaporated milk</li>
+            <li>1 (5 ounce) can evaporated milk</li>
 
-        <li>½ cup vinegar</li>
+            <li>½ cup vinegar</li>
 
-        <li>1 teaspoon prepared yellow mustard</li>
+            <li>1 teaspoon prepared yellow mustard</li>
 
-        <li>¼ cup butter</li>
+            <li>¼ cup butter</li>
 
-        <li>1 cup mayonnaise</li>
+            <li>1 cup mayonnaise</li>
 
-        <li>6 large hard-cooked eggs, diced</li>
+            <li>6 large hard-cooked eggs, diced</li>
 
-        <li>1 small onion, finely chopped</li>
+            <li>1 small onion, finely chopped</li>
 
-        <li>1 cup celery, chopped</li>
+            <li>1 cup celery, chopped</li>
 
-        <li>1 teaspoon salt</li>
-    </ul>
-    <h3>Directions</h3>
-    <ol>
-        <li>Place potatoes in a large pot and cover with salted water; bring to a boil. 
-            Reduce heat to medium-low and simmer until tender, about 20 minutes. Drain and set aside to cool.</li>
-        <li>While the potatoes are cooking, whisk together sugar, 2 beaten eggs, and cornstarch in a saucepan; season with salt.</li>
-        <li>Stir in milk, vinegar, and mustard. Cook and stir over medium heat until thickened, about 10 minutes. 
-            Remove from heat and stir in butter. Refrigerate until cool, then stir in mayonnaise.</li>
-        <li>Peel and dice potatoes. Transfer to a large bowl; toss with hard-cooked eggs, onion, celery, and 1 teaspoon salt.</li>
-        <li>Stir dressing gently into the bowl of potato salad until evenly coated. </li>
-        <li>Chill before serving, 3 hours to overnight.</li>
-    </ol>
+            <li>1 teaspoon salt</li>
+        </ul>
+        <h3>Directions</h3>
+        <ol>
+            <li>Place potatoes in a large pot and cover with salted water; bring to a boil. 
+                Reduce heat to medium-low and simmer until tender, about 20 minutes. Drain and set aside to cool.</li>
+            <li>While the potatoes are cooking, whisk together sugar, 2 beaten eggs, and cornstarch in a saucepan; season with salt.</li>
+            <li>Stir in milk, vinegar, and mustard. Cook and stir over medium heat until thickened, about 10 minutes. 
+                Remove from heat and stir in butter. Refrigerate until cool, then stir in mayonnaise.</li>
+            <li>Peel and dice potatoes. Transfer to a large bowl; toss with hard-cooked eggs, onion, celery, and 1 teaspoon salt.</li>
+            <li>Stir dressing gently into the bowl of potato salad until evenly coated. </li>
+            <li>Chill before serving, 3 hours to overnight.</li>
+        </ol>
+    </div>
 </body>
 </html>
