Updated CSS to use box model styling instead of flexbox

--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul class="main-page">
-        <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
-        <li><a href="./recipes/blueberry-waffles.html">Blueberry Waffles</a></li>
-        <li><a href="./recipes/potato-salad.html">World's Best Potato Salad</a></li>
-    </ul>
-    <ul class="main-images">
-        <li><img src="./images/lasagna.jpg" alt="Lasagna" height="240" width="240" class="lasagna"> </li>
-        <li><img src="./images/blueberry-waffles.jpg" alt="Blueberry Waffles" height="240" width="240" class="waffle"></li>
-        <li><img src="./images/potato-salad.jpg" alt="Potato Salad" height="240" width="240" class="potato"></li>
-    </ul>
+    <div class="content">
+        <ul class="main-page">
+            <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="./recipes/blueberry-waffles.html">Blueberry Waffles</a></li>
+            <li><a href="./recipes/potato-salad.html">World's Best Potato Salad</a></li>
+        </ul>
+        <ul class="main-images">
+            <li><img src="./images/lasagna.jpg" alt="Lasagna" height="240" width="240" class="lasagna"> </li>
+            <li><img src="./images/blueberry-waffles.jpg" alt="Blueberry Waffles" height="240" width="240" class="waffle"></li>
+            <li><img src="./images/potato-salad.jpg" alt="Potato Salad" height="240" width="240" class="potato"></li>
+        </ul>
+    </div>
     
 </body>
 </html>
